[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["AlnurT <alnur.tazhbenov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pre-commit = "^3.5.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
